Push my own .gitattributes; update .gitignore.
This should fix end-of-line issues that arise from people editing on
Windows.  (Take a look at afc4701 for an example of useless changes)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 *.o
 .#*
+
+# Let's not commit binary files to the repository.  We'll start seeing one-million
+# line diffs, which aren't nice.  This will stop the zip at least from being
+# added; if you unzip it in `.' then at least don't add anything binary.
+
 hw6testdirectory.zip
+
+# I use CTags and stuff to navigate code --- this shouldn't be global, but
+# whatever.
+
+TAGS
+GPATH
+GRTAGS
+GTAGS
